# todo-tauri

./: package.json  pnpm-lock.yaml
src/: main.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src/app-api/: setupTray.ts
src/hooks/: setup.ts
