[package]
authors = ["you"]
description = "A Tauri App"
edition = "2024"
name = "app"
version = "0.1.0"


[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.4.0", features = ["tray-icon", "image-png"] }
tauri-plugin-global-shortcut = "2.2.0"
tauri-plugin-notification = "2.2.2"

